@@ -14,7 +14,7 @@ summary: Utilisez l’onglet Surveillance pour afficher et créer des moniteurs 
 
 
 [role="lead"]
-Vous pouvez afficher et créer des moniteurs d’alerte pour vos abonnements Keystone à partir du tableau de bord Keystone dans la console NetApp . Le tableau de bord affiche les moniteurs générés par le système et définis par l'utilisateur pour l'utilisation de la capacité et l'expiration de l'abonnement. Vous pouvez créer des moniteurs pour définir des seuils, choisir la gravité des alertes et ajouter des destinataires de courrier électronique pour les notifications. Cette fonctionnalité n'est pas disponible dans Digital Advisor.
+Vous pouvez consulter et créer des moniteurs d'alerte pour vos abonnements Keystone à partir du tableau de bord Keystone dans la NetApp Console. Le tableau de bord affiche les indicateurs de surveillance générés par le système et ceux définis par l'utilisateur pour l'utilisation des capacités et l'expiration des abonnements. Vous pouvez créer des moniteurs pour définir des seuils, choisir la gravité des alertes et ajouter des destinataires de courrier électronique pour les notifications. Vous pouvez combler les lacunes de couverture en ajoutant des moniteurs aux abonnements non couverts ou en résolvant les problèmes liés aux moniteurs inutilisés. Cette fonctionnalité n'est pas disponible dans Digital Advisor.
 
 
 
@@ -28,7 +28,7 @@ Pour afficher les moniteurs d’alerte, suivez ces étapes :
 image:monitoring-alert-monitors-default-view-1.png["Une capture d'écran des moniteurs d'alerte pour les abonnements Keystone"]
 
 +
-Vous pouvez afficher une liste des moniteurs d'alerte sur vos abonnements Keystone , y compris les noms des moniteurs, les conditions d'alerte qui déclenchent des notifications, les niveaux de gravité, les numéros d'abonnement, les niveaux de service de performances et l'état. Vous pouvez vérifier la colonne *Créé par* pour déterminer si les moniteurs d'alerte sont générés par le système ou définis par l'utilisateur.
+Vous pouvez afficher une liste des moniteurs d'alerte sur vos abonnements Keystone , y compris les noms des moniteurs, les conditions d'alerte qui déclenchent des notifications, les niveaux de gravité, les numéros d'abonnement, les niveaux de service de performances et l'état. Vous pouvez consulter la colonne *Créé par* pour voir si les moniteurs d'alerte sont générés par le système ou définis par l'utilisateur.
 
 
 
@@ -45,7 +45,7 @@ Vous pouvez afficher une liste des moniteurs d'alerte sur vos abonnements Keysto
 Pour créer un moniteur d’alerte, suivez ces étapes :
 
 .Étapes
-. Cliquez sur le bouton *Créer un moniteur*.
+. Sélectionnez le bouton *Créer un moniteur*.
 +
 La page *Créer un moniteur d’alerte* apparaît.
 
@@ -101,7 +101,7 @@ Le système vous renvoie à la page *Moniteurs d'alerte*, où le moniteur mis à
 +
 La page *Créer un moniteur d'alerte* apparaît avec les valeurs de champ existantes déjà renseignées.
 
-. Modifiez les champs selon vos besoins et cliquez sur *Créer*.
+. Modifiez les champs dont vous avez besoin et cliquez sur *Créer*.
 +
 Un nouveau moniteur d'alerte est créé avec la configuration mise à jour et apparaît dans la liste *Moniteurs d'alerte*.
 
@@ -119,6 +119,58 @@ Après la suppression, les abonnements connectés au moniteur cessent de recevoi
 +
 
 NOTE: Les moniteurs générés par le système ne peuvent pas être supprimés par les utilisateurs.
+
+
+
+--
+====
+
+
+== Gérer les lacunes de couverture
+
+Une boîte de notification pliable *Complétez votre couverture* apparaît au-dessus de la liste des moniteurs d'alerte lorsqu'une action est requise. Cela vous aide :
+
+* Identifier et traiter les abonnements qui ne disposent pas de surveillance de l'utilisation de la capacité ou de l'expiration de l'abonnement.
+* Examiner et gérer les moniteurs qui ne sont actuellement associés à aucun abonnement.
++
+image:coverage-gaps.png["Capture d'écran des zones non couvertes par les moniteurs d'alerte pour les abonnements Keystone"]
+
+
+
+Pour corriger les abonnements sans moniteurs ou avec des moniteurs inutilisés, suivez ces étapes :
+
+[role="tabbed-block"]
+====
+.Abonnements sans moniteurs
+--
+.Étapes
+. Sélectionnez l'onglet *Expiration des abonnements* ou *Utilisation de la capacité*.
+. Dans la colonne *Résoudre*, sélectionnez l'icône des points de suspension correspondant à l'abonnement que vous souhaitez traiter.
+. Choisissez-en un :
++
+** *Ajouter au moniteur existant* : Une fenêtre contextuelle apparaît. Sélectionnez un moniteur et confirmez.
+** *Créer un nouveau moniteur* : Le système affiche la page *Créer un moniteur d’alerte*. Suivez les étapes danslink:../integrations/monitoring-alert-monitors.html#create-and-manage-alert-monitors["Créer un moniteur"] pour créer un nouveau moniteur.
++
+L'abonnement disparaît de l'onglet une fois la couverture ajoutée.
+
+
+
+
+
+--
+.Moniteurs inutilisés
+--
+.Étapes
+. Sélectionnez l'onglet *Non utilisé*.
+. Dans la colonne *Résoudre*, sélectionnez l'icône en forme de points de suspension correspondant au moniteur que vous souhaitez cibler.
+. Choisissez-en un :
++
+** *Modification* : Le système affiche la page *Surveillance des alertes de modification*. Modifiez les champs nécessaires et enregistrez. Pour en savoir plus, consultezlink:../integrations/monitoring-alert-monitors.html#create-and-manage-alert-monitors["Modifier le moniteur"] .
+** *Supprimer* : Confirmez la suppression pour retirer l’écran.
++
+Le moniteur disparaît de l'onglet après l'ajout ou la suppression d'abonnements.
+
+
 
 
 
